<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PlayerActivity">

    <TextView
            android:text="@string/titulo_player"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp" android:textSize="36sp"
            android:textStyle="bold"/>
    <View
            style="@style/divider"
            android:layout_width="0dp"
            android:id="@+id/view"
            android:background="@color/colorDivider" app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2" app:layout_constraintEnd_toEndOf="@+id/textView2"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/subtitulo_player"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/view" app:layout_constraintEnd_toEndOf="@+id/view"
            android:layout_marginTop="16dp" android:textSize="30sp" android:textStyle="bold"/>
    <TextView
            android:text="@string/info_player"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="@+id/textView5" android:textSize="18sp"/>
    <Button
            android:text="@string/text_iniciar_partida"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btStartGame"
            app:layout_constraintStart_toStartOf="@+id/inputPlayer2"
            app:layout_constraintEnd_toEndOf="@+id/inputPlayer2" android:layout_marginTop="72dp"
            app:layout_constraintTop_toBottomOf="@+id/inputPlayer2" style="@style/button_style"/>
    <EditText
            style="@style/home2_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/inputPlayer2"
            app:layout_constraintStart_toStartOf="@+id/inputPlayer1" app:layout_constraintEnd_toEndOf="@+id/inputPlayer1"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/inputPlayer1"
            android:hint="@string/text_jogador_2" tools:text="@string/text_jogador_2"/>
    <EditText
            style="@style/home_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/inputPlayer1"
            app:layout_constraintStart_toStartOf="@+id/textView6" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/textView6" android:layout_marginTop="72dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginStart="8dp"
            android:hint="@string/text_jogador_1" tools:text="@string/text_jogador_1"/>
</androidx.constraintlayout.widget.ConstraintLayout>